--- a/.squash.yml
+++ b/.squash.yml
@@ -9,9 +9,9 @@ deployments:
       - >
         DEBIAN_FRONTEND=noninteractive apt-get update &&
         DEBIAN_FRONTEND=noninteractive apt-get -y install
-        ruby-full gnupg wget ruby-bundler curl git
-      - wget -qO - https://www.mongodb.org/static/pgp/server-4.2.asc | sudo apt-key add -
-      - 'echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.2 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.2.list'
+        ruby-full gnupg wget ruby-bundler curl git sudo
+      - wget -qO - https://www.mongodb.org/static/pgp/server-4.2.asc | apt-key add -
+      - 'echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.2 multiverse" >> /etc/apt/sources.list.d/mongodb-org-4.2.list'
       - curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
       - >
         DEBIAN_FRONTEND=noninteractive apt-get update &&
