--- a/.squash.yml
+++ b/.squash.yml
@@ -1,7 +1,9 @@
 deployments:
   default:
     dockerimage: ubuntu
-    port_forwarding: 80:3000
+    port_forwarding: 
+      - 80:3000
+      - 4567:4567
     copy_files:
       - ~/.ssh/id_rsa ~/code/id_rsa
       - ~/.ssh/id_rsa.pub ~/code/id_rsa.pub
