--- a/.squash.yml
+++ b/.squash.yml
@@ -1,9 +1,7 @@
 deployments:
   default:
-    dockerimage: ubuntu:trusty
-    port_forwarding: 
-      - 80:3000
-      - 4567:4567
+    dockerimage: ubuntu
+    port_forwarding: 80:3000
     copy_files:
       - ~/.ssh/id_rsa ~/code/id_rsa
       - ~/.ssh/id_rsa.pub ~/code/id_rsa.pub
