--- a/.squash.yml
+++ b/.squash.yml
@@ -38,8 +38,10 @@ deployments:
       - cd /code
       - bundle exec ruby app.rb &
       - cd /code/frontend
-      - xvfb-run testcafe firefox,chrome test.js
       - npm start
+    deployment_page_commands:
+      run tests:
+        - xvfb-run testcafe firefox,chrome test.js
     run_options: -p 4567:4567
     subdomain_port_mapping:
       - api:4567
