--- a/.squash.yml
+++ b/.squash.yml
@@ -41,10 +41,13 @@ deployments:
       - cd /code/frontend
       - npm start
     deployment_page_commands:
-      run tests:
+      tests:
         - cd /code/frontend
         - PAGE=https://${SQUASH_DOMAIN}/ envsubst < test.template.js > test.js
         - xvfb-run testcafe firefox,chrome test.js
+      env:
+        - echo $SQUASH_DOMAIN
+        - echo $SQUASH_BRANCH_WITH_ID
     run_options: -p 4567:4567
     subdomain_port_mapping:
       - api:4567
