--- a/.squash.yml
+++ b/.squash.yml
@@ -46,8 +46,8 @@ deployments:
         - 'PAGE=https://${SQUASH_DOMAIN}/ envsubst < test.template.js > test.js'
         - xvfb-run testcafe firefox,chrome test.js
       env:
-        - 'echo $SQUASH_DOMAIN'
-        - 'echo $SQUASH_BRANCH_WITH_ID'
+        - 'echo "domain is $SQUASH_DOMAIN"'
+        - 'echo "branch id is $SQUASH_BRANCH_WITH_ID"'
     run_options: -p 4567:4567
     subdomain_port_mapping:
       - api:4567
