--- a/.squash.yml
+++ b/.squash.yml
@@ -43,7 +43,7 @@ deployments:
     deployment_page_commands:
       tests:
         - cd /code/frontend
-        - ''PAGE=https://${SQUASH_DOMAIN}/ envsubst < test.template.js > test.js''
+        - ""'PAGE=https://${SQUASH_DOMAIN}/ envsubst < test.template.js > test.js'""
         - xvfb-run testcafe firefox,chrome test.js
       env:
         - ""'echo "domain is $SQUASH_DOMAIN"'""
