--- a/.squash.yml
+++ b/.squash.yml
@@ -40,12 +40,13 @@ deployments:
       - bundle exec ruby app.rb &
       - cd /code/frontend
       - npm start
-    deployment_page_commands:
-      tests:
-        - cd /code/frontend
-        - bash launch_tests.sh
-        # - PAGE=https://${SQUASH_DOMAIN}/ envsubst < test.template.js > test.js
-        # - xvfb-run testcafe firefox,chrome test.js
+    pipelines:
+      testcafe:
+        scripts:
+          - cd /code/frontend
+          - echo $SQUASH_DOMAIN
+          - PAGE=https://${SQUASH_DOMAIN}/ envsubst < test.template.js > test.js
+          - xvfb-run testcafe firefox,chrome test.js
     run_options: -p 4567:4567
     subdomain_port_mapping:
       - api:4567
