--- a/.squash.yml
+++ b/.squash.yml
@@ -45,12 +45,12 @@ deployments:
         - cd /code/frontend
         - bash launch_tests.sh
     pipelines:
-      testcafe:
-        scripts:
-          - cd /code/frontend
-          - echo $SQUASH_DOMAIN
-          - PAGE=https://${SQUASH_DOMAIN}/ envsubst < test.template.js > test.js
-          - xvfb-run testcafe firefox,chrome test.js
+      - testcafe:
+          scripts:
+            - cd /code/frontend
+            - echo $SQUASH_DOMAIN
+            - PAGE=https://${SQUASH_DOMAIN}/ envsubst < test.template.js > test.js
+            - xvfb-run testcafe firefox,chrome test.js
     run_options: -p 4567:4567
     subdomain_port_mapping:
       - api:4567
