--- a/.squash.yml
+++ b/.squash.yml
@@ -50,6 +50,7 @@ deployments:
       - testcafe:
           scripts:
             - cd /code/frontend
+            - env
             - xvfb-run testcafe --skip-js-errors firefox,chrome test.js
     run_options: -p 4567:4567
     subdomain_port_mapping:
