--- a/.squash.yml
+++ b/.squash.yml
@@ -48,12 +48,11 @@ deployments:
         - bash launch_tests.sh
       testcafe:
         - xvfb-run testcafe --skip-js-errors firefox,chrome test.js
-    pipelines:
-      - testcafe:
-          scripts:
-            - cd /code/frontend
-            - env
-            - xvfb-run testcafe --skip-js-errors firefox,chrome test.js
+    auto_deploy_on_commits: true
+    auto_deploy_post_launch_commands:
+      - cd /code/frontend
+      - env
+      - xvfb-run testcafe --skip-js-errors firefox,chrome test.js
     run_options: -p 4567:4567
     subdomain_port_mapping:
       - api:4567
