--- a/.squash.yml
+++ b/.squash.yml
@@ -47,12 +47,13 @@ deployments:
         - cd /code/frontend
         - bash launch_tests.sh
       testcafe:
-        - xvfb-run testcafe --skip-js-errors firefox,chrome test.js
+        - xvfb-run testcafe --skip-js-errors firefox test.js
+        - xvfb-run testcafe --skip-js-errors chrome test.js
     auto_deploy_on_commits: true
     auto_deploy_post_launch_commands:
       - cd /code/frontend
-      - env
-      - xvfb-run testcafe --skip-js-errors firefox,chrome test.js
+      - xvfb-run testcafe --skip-js-errors firefox test.js
+      - xvfb-run testcafe --skip-js-errors chrome test.js
     run_options: -p 4567:4567
     subdomain_port_mapping:
       - api:4567
