--- a/.squash.yml
+++ b/.squash.yml
@@ -49,6 +49,7 @@ deployments:
         - xvfb-run testcafe --skip-js-errors chrome test.js
     auto_deploy_on_commits: true
     auto_deploy_post_launch_commands:
+      - cd /code/frontend
       - env
       - xvfb-run testcafe --skip-js-errors firefox test.js
       - xvfb-run testcafe --skip-js-errors chrome test.js
