--- a/.squash.yml
+++ b/.squash.yml
@@ -39,6 +39,7 @@ deployments:
       - cd /code
       - bundle exec ruby app.rb &
       - cd /code/frontend
+      - echo "launching"
       - npm start
     deployment_page_commands:
       tests:
@@ -53,6 +54,7 @@ deployments:
       - env
       - xvfb-run testcafe --skip-js-errors firefox test.js
       - xvfb-run testcafe --skip-js-errors chrome test.js
+    wait_post_launch: 90
     run_options: -p 4567:4567
     subdomain_port_mapping:
       - api:4567
