--- a/.squash.yml
+++ b/.squash.yml
@@ -50,6 +50,7 @@ deployments:
         - xvfb-run testcafe --skip-js-errors chrome test.js
     auto_deploy_on_commits: true
     auto_deploy_post_launch_commands:
+      - sleep 90
       - cd /code/frontend
       - xvfb-run testcafe --skip-js-errors firefox test.js
       - xvfb-run testcafe --skip-js-errors chrome test.js
