--- a/.squash.yml
+++ b/.squash.yml
@@ -41,13 +41,10 @@ deployments:
       - cd /code/frontend
       - echo "launching"
       - npm start
-    deployment_page_commands:
-      tests:
-        - cd /code/frontend
-        - bash launch_tests.sh
-      testcafe:
-        - xvfb-run testcafe --skip-js-errors firefox test.js
-        - xvfb-run testcafe --skip-js-errors chrome test.js
+    success_response_check:
+      fallback: false
+      urls:
+        - /
     auto_deploy_on_commits: true
     auto_deploy_post_launch_commands:
       - sleep 5
