--- a/.squash.yml
+++ b/.squash.yml
@@ -24,7 +24,7 @@ deployments:
       - chmod 400 ~/.ssh/id_rsa
       - chmod 600 ~/.ssh/id_rsa.pub
       - squash-cmd--git config --global core.sshCommand 'ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
-      - squash-cmd--git clone git@github.com:wisedrette/django-react-front.git -b {SQUASH_GIT_MATCH_BRANCH} --single-branch /code/frontend
+      - squash-cmd--git clone git@github.com:wisedrette/django-react-front.git -b {SQUASH_GIT_MATCH_BRANCH|testcafe} --single-branch /code/frontend
       - cd /code
       - bundle install
       - cd /code/frontend
