--- a/.squash.yml
+++ b/.squash.yml
@@ -47,8 +47,14 @@ deployments:
     auto_deploy_on_commits: true
     auto_deploy_post_launch_commands:
       - cd /code/frontend
-      - xvfb-run testcafe --skip-js-errors firefox test.js
-      - xvfb-run testcafe --skip-js-errors chrome test.js
+      - echo $SQUASH_DOMAIN
+      - HOSTNAME=${SQUASH_DOMAIN} xvfb-run testcafe --skip-js-errors firefox test.js
+      - HOSTNAME=${SQUASH_DOMAIN} xvfb-run testcafe --skip-js-errors chrome test.js
     run_options: -p 4567:4567
     subdomain_port_mapping:
       - api:4567
+    pipelines:
+      default:
+        scripts:
+          - echo "domain is ${SQUASH_DOMAIN}"
+      
